--- a/certificates.html
+++ b/certificates.html
@@ -482,14 +482,14 @@
                             <div class="flex items-center gap-2">
                                 <span class="text-sm font-medium text-gray-800 dark:text-gray-300" data-i18n="certificates.view.label">Visualizza:</span>
                                 <div class="flex bg-gray-300/60 dark:bg-gray-700/50 rounded-lg p-1 border border-gray-400/40 dark:border-gray-600/50">
-                                    <button id="cardsViewBtn" onclick="showCardView()" class="px-4 py-2 rounded-md text-sm font-medium transition-all duration-200 flex items-center gap-2 bg-emerald-500 dark:bg-emerald-600 text-white shadow-md" style="color: white !important;">
+                                    <button id="cardsViewBtn" onclick="showCardView()" class="px-4 py-2 rounded-md text-sm font-medium transition-all duration-200 flex items-center gap-2 text-gray-700 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-200">
                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path>
                                         </svg>
                                         <span data-i18n="certificates.view.cards">Schede</span>
                                     </button>
                                     
-                                    <button id="tableViewBtn" onclick="showTableView()" class="px-4 py-2 rounded-md text-sm font-medium transition-all duration-200 flex items-center gap-2 text-gray-700 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-200">
+                                    <button id="tableViewBtn" onclick="showTableView()" class="px-4 py-2 rounded-md text-sm font-medium transition-all duration-200 flex items-center gap-2 bg-emerald-500 dark:bg-emerald-600 text-white shadow-md" style="color: white !important;">
                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M3 14h18m-9-4v8m-7 0V4a1 1 0 011-1h3M3 20h18V4a1 1 0 00-1-1H4a1 1 0 00-1 1v16z"></path>
                                         </svg>
@@ -574,12 +574,12 @@
             <!-- Certificates Container -->
             <div id="certificatesContainer" class="hidden">
                 <!-- Cards View -->
-                <div id="cardsView" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4">
+                <div id="cardsView" class="hidden grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4">
                     <!-- Cards will be populated here -->
                 </div>
 
                 <!-- Table View -->
-                <div id="tableView" class="hidden bg-gray-800 rounded-lg border border-gray-700 overflow-hidden">
+                <div id="tableView" class="bg-gray-800 rounded-lg border border-gray-700 overflow-hidden">
                     <div class="overflow-x-auto">
                         <table class="table w-full text-sm">
                             <thead class="bg-gray-700">
@@ -1158,7 +1158,7 @@
         // Global variables
         let allCertificates = [];
         let filteredCertificates = [];
-        let currentView = 'cards';
+        let currentView = 'table';
         let sortField = '';
         let sortOrder = 'asc';
         let lastDraft = null;
@@ -2125,12 +2125,12 @@
                     email: (c.email||'').toLowerCase(),
                     phone: c.phone||'',
                     vehicle: useFields.brandModel ? [c.vehicle_brand, c.vehicle_model].filter(Boolean).join(' ') : undefined,
-                    plate: undefined,
-                    year: undefined,
+                    plate: useFields.plate ? c.plate : undefined,
+                    year: useFields.year ? c.year : undefined,
                     fuel: useFields.fuel ? c.fuel_type : undefined,
                     km: useFields.km ? c.odometer : undefined,
-                    vin: undefined,
-                    serial: undefined
+                    vin: useFields.vin ? c.vin : undefined,
+                    serial: useFields.serial ? c.serial : undefined
                 })) : selectedCerts.map(c => ({
                     name: c.clientName,
                     email: c.clientEmail,
@@ -2147,7 +2147,7 @@
                 const response = await fetch('/api/communications/generate', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ channel, style, prompt, recipients, useFields, language, send: sendNow, dealerSignatureText, dealerCompanyName, selectedVehicles, dealerId, selectedCount: selectedCerts.length })
+                    body: JSON.stringify({ channel, style, prompt, recipients, useFields, language, send: sendNow, dealerSignatureText, dealerCompanyName, selectedVehicles, dealerId, selectedCount: selectedCerts.length, sendToTestClients: sendToTest })
                 });
                 const ct = response.headers.get('content-type') || '';
                 if (!response.ok) {
@@ -2160,16 +2160,31 @@
                     out.textContent = (language === 'it' ? 'Errore: ' : 'Error: ') + (data.error || 'unknown');
                     return;
                 }
-                // Show only ONE base message on screen
-                const baseMsg = (data.base_message || data.results?.[0]?.message || '').replace(/</g,'&lt;');
-                out.innerHTML = `<div class="p-3 border border-gray-600 rounded mb-2"><pre class="whitespace-pre-wrap text-sm">${baseMsg}</pre></div>`;
+                // Show messages based on mode
+                if (sendToTest && data.results && data.results.length > 1) {
+                    // Test mode: show ALL personalized messages
+                    const messagesHtml = data.results.map((result, index) => {
+                        const msg = (result.message || '').replace(/</g,'&lt;');
+                        const recipient = recipients[index];
+                        const recipientName = recipient?.clientName || `Cliente ${index + 1}`;
+                        return `<div class="p-3 border border-gray-600 rounded mb-2">
+                            <div class="text-sm font-medium text-gray-400 mb-2">📧 ${recipientName}</div>
+                            <pre class="whitespace-pre-wrap text-sm">${msg}</pre>
+                        </div>`;
+                    }).join('');
+                    out.innerHTML = messagesHtml;
+                } else {
+                    // Normal mode: show only ONE base message
+                    const baseMsg = (data.base_message || data.results?.[0]?.message || '').replace(/</g,'&lt;');
+                    out.innerHTML = `<div class="p-3 border border-gray-600 rounded mb-2"><pre class="whitespace-pre-wrap text-sm">${baseMsg}</pre></div>`;
+                }
 
                 // Cost summary
                 if (data.costs) {
                     window.lastCosts = data.costs;
                     const el = document.getElementById('costSummary');
                     if (el) {
-                        const euro = (c)=> (c/100).toLocaleString(undefined,{style:'currency',currency:'EUR'});
+                        const euro = (c)=> (c/100).toLocaleString('it-IT',{style:'currency',currency:'EUR'});
                         el.textContent = `Costo invio: Email ${euro(data.costs.email_cents)} • WhatsApp ${euro(data.costs.whatsapp_cents)} • OpenAI ${euro(data.costs.openai_cents)} • Totale ${euro(data.costs.total_cents)}`;
                     }
                 }
@@ -4223,8 +4238,8 @@
     document.addEventListener('DOMContentLoaded', function() {
         forceEmergencyThemeColors();
         // Initialize Card/Table buttons with correct colors
-        if (typeof showCardView === 'function') {
-            showCardView(); // Default to cards view with correct colors
+        if (typeof showTableView === 'function') {
+            showTableView(); // Default to table view with correct colors
         }
         
         // Force dark mode immediately after DOM load
