--- a/billing.html
+++ b/billing.html
@@ -466,12 +466,54 @@
       if (rechargeStatus === 'success') {
         // Show success message and refresh balance
         setTimeout(() => {
-          alert('✅ Ricarica completata con successo! Il tuo credito è stato aggiornato.');
+          // Dialog di successo
+          const dialog = document.createElement('div');
+          dialog.className = 'fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50';
+          dialog.innerHTML = `
+            <div class="bg-white dark:bg-gray-800 rounded-lg p-6 max-w-md mx-4">
+              <div class="flex items-center mb-4">
+                <div class="w-12 h-12 bg-green-100 dark:bg-green-900 rounded-full flex items-center justify-center mr-4">
+                  <svg class="w-6 h-6 text-green-600 dark:text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                  </svg>
+                </div>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-gray-100">✅ Ricarica completata!</h3>
+              </div>
+              <p class="text-gray-600 dark:text-gray-300 mb-4">Il tuo credito è stato aggiornato con successo.</p>
+              <div class="flex justify-end">
+                <button onclick="this.closest('.fixed').remove()" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+                  OK
+                </button>
+              </div>
+            </div>
+          `;
+          document.body.appendChild(dialog);
           window.location.href = '/billing.html'; // Remove URL parameters
         }, 500);
       } else if (rechargeStatus === 'cancelled') {
         setTimeout(() => {
-          alert('❌ Ricarica annullata. Nessun addebito è stato effettuato.');
+          // Dialog di errore
+          const dialog = document.createElement('div');
+          dialog.className = 'fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50';
+          dialog.innerHTML = `
+            <div class="bg-white dark:bg-gray-800 rounded-lg p-6 max-w-md mx-4">
+              <div class="flex items-center mb-4">
+                <div class="w-12 h-12 bg-red-100 dark:bg-red-900 rounded-full flex items-center justify-center mr-4">
+                  <svg class="w-6 h-6 text-red-600 dark:text-red-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                  </svg>
+                </div>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-gray-100">❌ Ricarica annullata</h3>
+              </div>
+              <p class="text-gray-600 dark:text-gray-300 mb-4">Nessun addebito è stato effettuato.</p>
+              <div class="flex justify-end">
+                <button onclick="this.closest('.fixed').remove()" class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700">
+                  OK
+                </button>
+              </div>
+            </div>
+          `;
+          document.body.appendChild(dialog);
           window.location.href = '/billing.html'; // Remove URL parameters
         }, 500);
       }
