Aggiunge padding logo Mobisat in tutte le pagine e pulsante billing in sidebar vehicle.html

--- a/certificates.html
+++ b/certificates.html
@@ -502,7 +502,7 @@
                         <h1 class="text-xl font-semibold text-white" data-i18n="page.certificates.title"></h1>
                         <p class="text-gray-400 text-sm" data-i18n="page.certificates.subtitle"></p>
                     </div>
-                                 <div class="flex items-center space-x-4">
+                                 <div class="flex items-center space-x-4 pr-4">
                      <img id="headerLogo" src="/images/header_logo_dark_theme.png?v10" alt="Mobisat" class="h-8 w-auto object-contain">
                  </div>
             </div>
