--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <h1 class="page-title text-2xl font-bold" data-i18n="page.dashboard.title"></h1>
                         <p class="page-subtitle" data-i18n="page.dashboard.subtitle"></p>
                     </div>
-                <div class="flex items-center space-x-4">
+                <div class="flex items-center space-x-4 pr-4">
                                                                         <img id="headerLogo" src="/images/header_logo_light_theme.png?v10" alt="Mobisat" class="h-8 w-auto object-contain">
             </div>
         </div>
