--- a/settings.html
+++ b/settings.html
@@ -112,7 +112,7 @@
                      <h1 class="page-title text-xl font-semibold" data-i18n="page.settings.title"></h1>
                      <p class="page-subtitle text-sm" data-i18n="page.settings.subtitle"></p>
                  </div>
-                                 <div class="flex items-center space-x-4">
+                                 <div class="flex items-center space-x-4 pr-4">
                      <img id="headerLogo" src="/images/header_logo_light_theme.png?v10" alt="Mobisat" class="h-8 w-auto object-contain">
                  </div>
             </div>
