--- a/vehicle.html
+++ b/vehicle.html
@@ -233,6 +233,17 @@
                 <div class="absolute left-full ml-2 px-2 py-1 bg-gray-900 text-white text-sm rounded opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none whitespace-nowrap z-60" data-i18n="nav.certificates"></div>
             </div>
             
+            <!-- Billing -->
+            <div class="relative group mt-2">
+                <button onclick="window.location.href='/billing.html'" class="w-full p-3 flex justify-center rounded-lg text-gray-300 hover:bg-gray-700 hover:text-white transition-colors">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M5 6h14a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2zm4 10h.01M8 14h8" />
+                    </svg>
+                </button>
+                <!-- Tooltip -->
+                <div class="absolute left-full ml-2 px-2 py-1 bg-gray-900 text-white text-sm rounded opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none whitespace-nowrap z-60" data-i18n="nav.billing"></div>
+            </div>
+            
             <!-- Settings -->
             <div class="relative group mt-2">
                 <button onclick="window.location.href='/settings.html'" class="w-full p-3 flex justify-center rounded-lg text-gray-300 hover:bg-gray-700 hover:text-white transition-colors">
@@ -267,7 +278,7 @@
                     <h1 class="text-xl font-semibold text-white" data-i18n="vehicle.page_title">Dettagli Veicolo</h1>
                     <p class="text-gray-400 text-sm" data-i18n="vehicle.page_subtitle">Informazioni complete del veicolo e storico</p>
                     </div>
-                <div class="flex items-center space-x-4">
+                <div class="flex items-center space-x-4 pr-4">
                     <img id="headerLogo" src="/images/header_logo_dark_theme.png?v10" alt="Mobisat" class="h-8 w-auto object-contain">
                 </div>
             </div>
