--- a/certificates.html
+++ b/certificates.html
@@ -2326,6 +2326,9 @@
                 // Riassunto veicoli selezionati in base ai chip attivi
                 const selectedVehicles = (sendToTest ? testClients.map(c=>({
                     name: [c.first_name, c.last_name].filter(Boolean).join(' ').trim(),
+                    firstName: c.first_name || '',
+                    lastName: c.last_name || '',
+                    companyName: c.company || '',
                     email: (c.email||'').toLowerCase(),
                     phone: c.phone||'',
                     vehicle: useFields.brandModel ? [c.vehicle_brand, c.vehicle_model].filter(Boolean).join(' ') : undefined,
@@ -2337,6 +2340,9 @@
                     serial: useFields.serial ? c.serial : undefined
                 })) : selectedCerts.map(c => ({
                     name: c.clientName,
+                    firstName: c.client?.firstName || '',
+                    lastName: c.client?.lastName || '',
+                    companyName: c.client?.company || '',
                     email: c.clientEmail,
                     phone: c.clientPhone,
                     vehicle: useFields.brandModel ? c.vehicleInfo : undefined,
@@ -5591,7 +5597,9 @@
             if (!container) return;
 
             const tags = [
-                { key: 'NOME', label: 'Nome Cliente', type: 'client', icon: '👤' },
+                { key: 'NOME', label: 'Nome', type: 'client', icon: '👤' },
+                { key: 'COGNOME', label: 'Cognome', type: 'client', icon: '👤' },
+                { key: 'COMPANY_NAME', label: 'Nome Azienda', type: 'client', icon: '🏢' },
                 { key: 'EMAIL', label: 'Email', type: 'contact', icon: '📧' },
                 { key: 'TELEFONO', label: 'Telefono', type: 'contact', icon: '📱' },
                 { key: 'VEICOLO', label: 'Marca Modello', type: 'vehicle', icon: '🚗' },
@@ -5735,7 +5743,9 @@
             }
 
             let sampleData = {
-                'NOME': 'Mario Rossi',
+                'NOME': 'Mario',
+                'COGNOME': 'Rossi',
+                'COMPANY_NAME': 'Azienda Esempio S.r.l.',
                 'EMAIL': 'mario.rossi@email.com',
                 'TELEFONO': '+39 123 456 7890',
                 'VEICOLO': 'Fiat Panda',
@@ -5759,7 +5769,9 @@
                     
                     if (selectedClient) {
                         sampleData = {
-                            'NOME': [selectedClient.first_name, selectedClient.last_name].filter(Boolean).join(' ').trim() || 'Cliente Test',
+                            'NOME': selectedClient.first_name || 'Nome',
+                            'COGNOME': selectedClient.last_name || 'Cognome',
+                            'COMPANY_NAME': selectedClient.company || 'Azienda Cliente',
                             'EMAIL': selectedClient.email || 'email@esempio.com',
                             'TELEFONO': selectedClient.phone || '+39 000 000 0000',
                             'VEICOLO': [selectedClient.vehicle_brand, selectedClient.vehicle_model].filter(Boolean).join(' ') || 'Veicolo',
@@ -5839,6 +5851,9 @@
                     const testClients = await fetch(`/api/communications/test-clients/${dealerId}`).then(r=>r.json()).then(j=> j.data||[]);
                     recipients = testClients.map(c => ({
                         name: [c.first_name, c.last_name].filter(Boolean).join(' ').trim(),
+                        firstName: c.first_name || '',
+                        lastName: c.last_name || '',
+                        companyName: c.company || '',
                         email: c.email?.toLowerCase() || '',
                         phone: c.phone || '',
                         vehicle: [c.vehicle_brand, c.vehicle_model].filter(Boolean).join(' '),
@@ -5852,6 +5867,9 @@
                 } else {
                     recipients = selectedCerts.map(cert => ({
                         name: `${cert.client?.firstName || ''} ${cert.client?.lastName || ''}`.trim(),
+                        firstName: cert.client?.firstName || '',
+                        lastName: cert.client?.lastName || '',
+                        companyName: cert.client?.company || '',
                         email: cert.client?.email?.toLowerCase() || '',
                         phone: cert.client?.phone || '',
                         vehicle: `${cert.brand || ''} ${cert.model || ''}`.trim(),
