Add debug logging for email subject issue
 DEBUG - Email Subject Not Populating:

 Added comprehensive frontend debug:
- Log channel, email_subject, emailSubjectInput availability
- Clear success/failure paths with detailed logging
- Debug emailSubjectInput element selection

 Enhanced AI prompt structure:
- Visual emoji-based instructions (   )
- Explicit DO/DON'T lists for better AI comprehension
- Dynamic placeholder list injection in prompt
- Clear template structure with [STOP] instruction

 Server-side debug already present:
- Raw AI response logging
- JSON parsing success/failure tracking
- Fallback subject assignment logging

This will help identify:
- If emailSubjectInput element is found
- If data.email_subject is returned from API
- If channel is correctly set to 'email'
- If AI is following improved prompt instructions

Next: Test and check browser console for debug output.

--- a/certificates.html
+++ b/certificates.html
@@ -5863,8 +5863,22 @@
                 }
 
                 // Mostra oggetto email se generato
+                console.log('🔍 Email subject debug:', {
+                    channel,
+                    email_subject: data.email_subject,
+                    emailSubjectInput: !!emailSubjectInput,
+                    emailSubjectInputId: emailSubjectInput?.id
+                });
+                
                 if (channel === 'email' && data.email_subject && emailSubjectInput) {
+                    console.log('✅ Populating email subject:', data.email_subject);
                     emailSubjectInput.value = data.email_subject;
+                } else {
+                    console.warn('❌ Email subject not populated:', {
+                        channelIsEmail: channel === 'email',
+                        hasEmailSubject: !!data.email_subject,
+                        hasInputElement: !!emailSubjectInput
+                    });
                 }
 
                 // Mostra costi
