Improve AI message formatting and email subject debugging
- Enhanced AI prompt to explicitly request paragraph formatting with \\n\\n
- Added mandatory JSON format requirement for email subject generation
- Improved frontend logging for email subject population debugging
- Added detailed server-side logging for AI response parsing
- More specific instructions for AI to include both subject and message
- Better error tracking for email subject field population issues

--- a/certificates.html
+++ b/certificates.html
@@ -5872,17 +5872,21 @@
                     channel,
                     email_subject: data.email_subject,
                     emailSubjectInput: !!emailSubjectInput,
-                    emailSubjectInputId: emailSubjectInput?.id
+                    emailSubjectInputId: emailSubjectInput?.id,
+                    fullDataResponse: data
                 });
                 
                 if (channel === 'email' && data.email_subject && emailSubjectInput) {
                     console.log('✅ Populating email subject:', data.email_subject);
                     emailSubjectInput.value = data.email_subject;
+                    emailSubjectInput.placeholder = 'Oggetto generato dall\'AI';
                 } else {
                     console.warn('❌ Email subject not populated:', {
                         channelIsEmail: channel === 'email',
                         hasEmailSubject: !!data.email_subject,
-                        hasInputElement: !!emailSubjectInput
+                        emailSubjectValue: data.email_subject,
+                        hasInputElement: !!emailSubjectInput,
+                        inputElementId: emailSubjectInput?.id
                     });
                 }
 
