Fix vehicle placeholder replacement in AI generation
The issue was that recipients in generateAIContent() were missing vehicle data:
- Only included id, clientName, clientEmail, clientPhone
- Vehicle placeholders {VEICOLO}, {TARGA}, {ANNO} etc. remained empty

FIXED by adding all vehicle data to recipients mapping:
- vehicle: brand + model combination
- plate: license_plate value
- year, fuel, km, vin, serial: direct mapping
- firstName, lastName, companyName: client details

Now all vehicle placeholders will be properly replaced with real data.

--- a/certificates.html
+++ b/certificates.html
@@ -5806,7 +5806,24 @@
                     return;
                 }
             } else {
-                recipients = selectedCerts.map(r=>({ id:r.id, clientName:r.clientName, clientEmail:(r.clientEmail||'').toLowerCase(), clientPhone:r.clientPhone||'' }));
+                recipients = selectedCerts.map(cert => ({
+                    id: cert.id,
+                    clientName: cert.clientName,
+                    clientEmail: (cert.clientEmail || '').toLowerCase(),
+                    clientPhone: cert.clientPhone || '',
+                    // Aggiungi i dati del veicolo per i placeholder
+                    vehicle: `${cert.brand || ''} ${cert.model || ''}`.trim(),
+                    plate: cert.license_plate || '',
+                    year: cert.year || '',
+                    fuel: cert.fuel_type || '',
+                    km: cert.odometer || '',
+                    vin: cert.vin || '',
+                    serial: cert.serial || '',
+                    // Dati client dettagliati
+                    firstName: cert.client?.firstName || '',
+                    lastName: cert.client?.lastName || '',
+                    companyName: cert.client?.company || ''
+                }));
             }
 
             if (!sendToTest && !selectedCerts.length) {
