--- a/certificates.html
+++ b/certificates.html
@@ -728,7 +728,7 @@
     </div>
 
     <!-- Customization Modal -->
-    <div id="customizeModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
+    <div id="customizeModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50 p-4">
         <div class="bg-gray-800 rounded-lg p-6 w-full max-w-4xl max-h-[80vh] overflow-y-auto border border-gray-700">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-xl font-bold text-white" data-i18n="customize.title">Personalizza Vista</h2>
@@ -810,8 +810,8 @@
     </div>
 
     <!-- Advanced Search Modal -->
-    <div id="advancedSearchModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
-        <div class="bg-gray-800 rounded-lg p-6 w-full max-w-6xl max-h-[90vh] overflow-y-auto border border-gray-700">
+    <div id="advancedSearchModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50 p-4">
+        <div class="bg-gray-800 rounded-lg p-6 w-full max-w-6xl max-h-[85vh] overflow-y-auto border border-gray-700">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-xl font-bold text-white flex items-center gap-2">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -895,8 +895,8 @@
     </div>
 
     <!-- Vehicle Groups Management Modal -->
-    <div id="vehicleGroupsModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
-        <div class="bg-gray-800 rounded-lg p-6 w-full max-w-6xl max-h-[90vh] overflow-y-auto border border-gray-700">
+    <div id="vehicleGroupsModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50 p-4">
+        <div class="bg-gray-800 rounded-lg p-6 w-full max-w-6xl max-h-[85vh] overflow-y-auto border border-gray-700">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-xl font-bold text-white flex items-center gap-2">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1042,8 +1042,8 @@
     </div>
 
     <!-- Vehicle Management Modal -->
-    <div id="vehicleManagementModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
-        <div class="bg-gray-800 rounded-lg p-6 w-full max-w-6xl max-h-[90vh] overflow-hidden border border-gray-700">
+    <div id="vehicleManagementModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50 p-4">
+        <div class="bg-gray-800 rounded-lg p-6 w-full max-w-6xl max-h-[85vh] overflow-y-auto border border-gray-700">
             <div class="flex justify-between items-center mb-6">
                 <h3 class="text-lg font-bold text-white" id="vehicleManagementModalTitle" data-it="Gestione Veicoli del Gruppo" data-en="Group Vehicle Management">Gestione Veicoli del Gruppo</h3>
                 <button onclick="closeVehicleManagementModal()" class="text-gray-400 hover:text-white transition-colors">
@@ -1162,8 +1162,8 @@
     </script>
         
         <!-- Bulk Contact Dialog (clean UI) -->
-        <div id="bulkContactDialog" class="hidden fixed inset-0 bg-black/60 flex items-center justify-center z-50">
-            <div class="bg-gray-900 border border-gray-700 rounded-lg w-full max-w-4xl p-6">
+        <div id="bulkContactDialog" class="hidden fixed inset-0 bg-black/60 flex items-center justify-center z-50 p-4">
+            <div class="bg-gray-900 border border-gray-700 rounded-lg w-full max-w-4xl p-6 max-h-[85vh] overflow-y-auto">
                 <div class="flex items-center justify-between mb-4">
                     <h3 class="text-lg font-semibold" data-i18n="contact.dialog.title">Comunicazione AI ai selezionati</h3>
                     <button onclick="closeBulkContactDialog()" class="text-gray-400 hover:text-white">✕</button>
@@ -1271,8 +1271,8 @@
         </div>
 
         <!-- Bulk Contact WITHOUT AI Dialog -->
-        <div id="bulkContactWithoutAIDialog" class="hidden fixed inset-0 bg-black/60 flex items-center justify-center z-50">
-            <div class="bg-gray-900 border border-gray-700 rounded-lg w-full max-w-5xl p-6">
+        <div id="bulkContactWithoutAIDialog" class="hidden fixed inset-0 bg-black/60 flex items-center justify-center z-50 p-4">
+            <div class="bg-gray-900 border border-gray-700 rounded-lg w-full max-w-5xl p-6 max-h-[85vh] overflow-y-auto">
                 <div class="flex items-center justify-between mb-4">
                     <h3 class="text-lg font-semibold" data-i18n="manual_contact.title">Comunicazione Manuale ai Selezionati</h3>
                     <button onclick="closeBulkContactWithoutAIDialog()" class="text-gray-400 hover:text-white">✕</button>
