--- a/certificates.html
+++ b/certificates.html
@@ -2436,13 +2436,14 @@
                     companyName: c.company || '',
                     email: (c.email||'').toLowerCase(),
                     phone: c.phone||'',
-                    vehicle: useFields.brandModel ? [c.vehicle_brand, c.vehicle_model].filter(Boolean).join(' ') : undefined,
-                    plate: useFields.plate ? c.plate : undefined,
-                    year: useFields.year ? c.year : undefined,
-                    fuel: useFields.fuel ? c.fuel_type : undefined,
-                    km: useFields.km ? c.odometer : undefined,
-                    vin: useFields.vin ? c.vin : undefined,
-                    serial: useFields.serial ? c.serial : undefined
+                    // SEMPRE includere i dati del veicolo per i placeholder (non dipendere da useFields)
+                    vehicle: `${c.vehicle_brand || ''} ${c.vehicle_model || ''}`.trim(),
+                    plate: c.vehicle_plate || '',
+                    year: c.vehicle_year || '',
+                    fuel: c.vehicle_fuel || c.vehicle_fuelType || '',
+                    km: c.vehicle_km || c.vehicle_odometer || '',
+                    vin: c.vehicle_vin || '',
+                    serial: c.vehicle_serial || ''
                 })) : selectedCerts.map(c => ({
                     name: c.clientName,
                     firstName: c.client?.firstName || '',
@@ -2450,13 +2451,14 @@
                     companyName: c.client?.company || '',
                     email: c.clientEmail,
                     phone: c.clientPhone,
-                    vehicle: useFields.brandModel ? c.vehicleInfo : undefined,
-                    plate: useFields.plate ? c.vehiclePlate : undefined,
-                    year: useFields.year ? c.vehicleYear : undefined,
-                    fuel: useFields.fuel ? c.fuelType : undefined,
-                    km: useFields.km ? c.odometer : undefined,
-                    vin: useFields.vin ? c.vin : undefined,
-                    serial: useFields.serial ? c.serial : undefined
+                    // SEMPRE includere i dati del veicolo per i placeholder (non dipendere da useFields)
+                    vehicle: `${c.vehicle?.brand || c.brand || ''} ${c.vehicle?.model || c.model || ''}`.trim(),
+                    plate: c.vehicle?.plate || c.license_plate || '',
+                    year: c.vehicle?.year || c.year || '',
+                    fuel: c.vehicle?.fuelType || c.fuel_type || '',
+                    km: c.odometer || '',
+                    vin: c.vin || '',
+                    serial: c.serial || ''
                 }))); 
 
                 const response = await fetch('/api/communications/generate', {
