Improve Back to Certificates button positioning on vehicle.html
- Replace subtle link with prominent green button in navigation section
- Button now has proper styling: emerald background, white text, shadow, rounded corners
- Maintains same position as requested (where red highlight was shown in image)
- Uses data-i18n for proper localization
- More visible and user-friendly than previous simple link

--- a/vehicle.html
+++ b/vehicle.html
@@ -274,10 +274,20 @@
         <!-- Header -->
         <header class="bg-gray-800 border-b border-gray-700 px-4 py-3">
             <div class="flex items-center justify-between">
+                <div class="flex items-center space-x-4">
+                    <!-- Back to Certificates Button -->
+                    <button onclick="window.location.href='/certificates.html'" 
+                            class="flex items-center space-x-2 px-4 py-2 bg-emerald-600 hover:bg-emerald-700 text-white rounded-lg transition-colors shadow-lg font-medium">
+                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+                        </svg>
+                        <span data-i18n="vehicle.back_to_certificates">Torna ai Certificati</span>
+                    </button>
                     <div>
-                    <h1 class="text-xl font-semibold text-white" data-i18n="vehicle.page_title">Dettagli Veicolo</h1>
-                    <p class="text-gray-400 text-sm" data-i18n="vehicle.page_subtitle">Informazioni complete del veicolo e storico</p>
+                        <h1 class="text-xl font-semibold text-white" data-i18n="vehicle.page_title">Dettagli Veicolo</h1>
+                        <p class="text-gray-400 text-sm" data-i18n="vehicle.page_subtitle">Informazioni complete del veicolo e storico</p>
                     </div>
+                </div>
                 <div class="flex items-center space-x-4 pr-4">
                     <img id="headerLogo" src="/images/header_logo_dark_theme.png?v10" alt="Mobisat" class="h-8 w-auto object-contain">
                 </div>
@@ -318,12 +328,13 @@
                 
                 <!-- Navigation -->
                 <div class="px-6 py-3 border-b border-gray-200 dark:border-gray-700">
-                    <a href="/certificates.html" class="inline-flex items-center gap-2 text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200 text-sm font-medium transition-colors">
+                    <button onclick="window.location.href='/certificates.html'" 
+                            class="inline-flex items-center gap-2 px-4 py-2 bg-emerald-600 hover:bg-emerald-700 text-white rounded-lg transition-colors shadow-lg font-medium">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
                         </svg>
-                        <span>Torna ai Certificati</span>
-                    </a>
+                        <span data-i18n="vehicle.back_to_certificates">Torna ai Certificati</span>
+                    </button>
                 </div>
                 
                 <!-- Tabs Navigation -->
