Fix: Correzione localizzazione dialog e cambio titolo da 'Service Hub Portal' a 'Service Portal'
- Sistemata localizzazione di tutti i dialog/alert/confirm in tutte le pagine HTML
- I dialog ora mostrano solo il testo nella lingua corretta invece di testo bilingue
- Cambiato titolo da 'Service Hub Portal' a 'Service Portal' in tutte le pagine
- Aggiornati riferimenti nei componenti header/footer
- Corretti dialog in: settings.html, billing.html, certificates.html, index.html, vehicle.html
- Tutti i dialog ora seguono il pattern di localizzazione corretto con localStorage

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
                 <a href="/index.html" class="flex items-center">
                     <!-- Service Hub Logo - using PNG for now -->
                     <img src="/images/serviceHub.png" 
-                         alt="Service Hub Portal" 
+                         alt="Service Portal" 
                          class="h-8 w-auto"
                          loading="lazy">
                 </a>
