--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Service Hub Portal</title>
+    <title>Dashboard - Service Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
@@ -368,11 +368,16 @@
 
         // Logout function
         async function logout() {
+            const lang = localStorage.getItem('servicehub-language') || 'it';
+            const title = lang === 'en' ? 'Confirm Logout' : 'Conferma Logout';
+            const message = lang === 'en' ? 'Are you sure you want to logout?' : 'Sei sicuro di voler effettuare il logout?';
+            const confirmText = lang === 'en' ? 'Logout' : 'Esci';
+            const cancelText = lang === 'en' ? 'Cancel' : 'Annulla';
             const confirmed = await window.customDialog.confirm(
-                'Conferma Logout',
-                'Sei sicuro di voler uscire?',
-                'Esci',
-                'Annulla'
+                title,
+                message,
+                confirmText,
+                cancelText
             );
             
             if (confirmed) {
