--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="meta.login.title">Login - Service Hub Portal</title>
+    <title data-i18n="meta.login.title">Login - Service Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Favicons -->
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
@@ -39,7 +39,7 @@
             <div class="mb-4">
                 <img src="../images/serviceHub.png" alt="Service Hub" class="h-16 mx-auto" onerror="this.outerHTML='<div class=&quot;w-16 h-16 bg-blue-600 rounded-lg mx-auto flex items-center justify-center&quot;><span class=&quot;text-white font-bold text-2xl&quot;>SH</span></div>'">
             </div>
-            <h1 id="pageTitle" class="text-3xl font-bold text-white mb-2">Service Hub Portal</h1>
+            <h1 id="pageTitle" class="text-3xl font-bold text-white mb-2">Service Portal</h1>
             <p id="pageSubtitle" class="text-blue-300">Advanced Telematics Platform</p>
         </div>
         
@@ -171,7 +171,7 @@
         // Translations
         const translations = {
             it: {
-                pageTitle: 'Service Hub Portal',
+                pageTitle: 'Service Portal',
                 pageSubtitle: 'Piattaforma Telematica Avanzata',
                 deliveryLabel: 'Come vuoi ricevere il tuo PIN?',
                 emailOption: 'Email',
@@ -199,7 +199,7 @@
                 verifying: 'Verifica...'
             },
             en: {
-                pageTitle: 'Service Hub Portal',
+                pageTitle: 'Service Portal',
                 pageSubtitle: 'Advanced Telematics Platform',
                 deliveryLabel: 'How would you like to receive your PIN?',
                 emailOption: 'Email',
