--- a/device-mapping-fmb003.html
+++ b/device-mapping-fmb003.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FMB003 - Mappatura Parametri OBD - Service Hub Portal</title>
+    <title>FMB003 - Mappatura Parametri OBD - Service Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
