--- a/footer.html
+++ b/footer.html
@@ -41,7 +41,7 @@
                 &copy; 2025 Mobisat SRL. All rights reserved.
             </p>
             <div style="color: #6b7280; font-size: 14px;">
-                <span style="color: #6b7280;">Service Hub Portal v1.0</span>
+                <span style="color: #6b7280;">Service Portal v1.0</span>
                 <span style="color: #6b7280; margin: 0 8px;">•</span>
                 <span style="color: #6b7280;">P.IVA: 03864950120</span>
             </div>
@@ -120,8 +120,8 @@
                     <i class="fas fa-times text-sm"></i>
                 </button>
             </div>
-            <p class="text-white text-opacity-90 mt-3 text-sm" data-en="Need assistance with the Service Hub Portal? We're here to help!" data-it="Hai bisogno di assistenza con il Portale Service Hub? Siamo qui per aiutarti!">
-                Need assistance with the Service Hub Portal? We're here to help!
+            <p class="text-white text-opacity-90 mt-3 text-sm" data-en="Need assistance with the Service Portal? We're here to help!" data-it="Hai bisogno di assistenza con il Service Portal? Siamo qui per aiutarti!">
+                Need assistance with the Service Portal? We're here to help!
             </p>
         </div>
         
