Rebranding completo: Service Hub  Service Portal
- Cambiato tutti i titoli delle pagine HTML da Service Hub Portal a Service Portal
- Aggiornato alt text di tutte le immagini logo nelle sidebar
- Modificato footer branding da SERVICE HUB PORTAL a SERVICE PORTAL
- Aggiornato server.js: messaggi, email, prodotti Stripe, comunicazioni WhatsApp
- Modificato js/email-service.js: subject e contenuto email PIN
- Aggiornato js/i18n.js: TUTTE le traduzioni titoli (italiano + inglese)
- Cambiato header comments in tutti i file JavaScript e config
- Aggiornato package.json description
- Sistemato file di backup HTML
- Aggiornato commenti nei componenti header/footer

Totale: 28+ file modificati per rebranding completo e consistente

--- a/billing.html
+++ b/billing.html
@@ -46,7 +46,7 @@
   <!-- Sidebar (same as other pages) -->
   <div class="sidebar fixed left-0 top-0 h-full w-16 flex flex-col py-4 z-50">
     <div class="flex items-center justify-center mb-8">
-      <img src="/images/greenbox-logo.png" alt="Service Hub" class="w-10 h-10 object-contain" />
+      <img src="/images/greenbox-logo.png" alt="Service Portal" class="w-10 h-10 object-contain" />
     </div>
     <nav class="flex-1 py-4">
       <div class="relative group">
