--- a/certificates.backup.html
+++ b/certificates.backup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certificati - Service Hub Portal</title>
+    <title>Certificati - Service Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <!-- Authentication Guard -->
@@ -302,7 +302,7 @@
     <div class="sidebar fixed left-0 top-0 h-full w-16 flex flex-col py-4 z-50">
         <!-- Logo -->
         <div class="flex items-center justify-center mb-8">
-            <img src="/images/greenbox-logo.png" alt="Service Hub" class="w-10 h-10 object-contain" onerror="handleLogoError()" id="sidebarLogo">
+            <img src="/images/greenbox-logo.png" alt="Service Portal" class="w-10 h-10 object-contain" onerror="handleLogoError()" id="sidebarLogo">
             <!-- Fallback logo if image fails -->
             <div class="w-10 h-10 bg-green-600 rounded-lg flex items-center justify-center text-white font-bold text-xs" style="display: none;" id="logoFallback">
                 SH
