--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,9 @@
 <footer style="background-color: #f9fafb; border-top: 1px solid #e5e7eb; padding: 48px 0;">
     <div style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
-        <!-- Service Hub Logo/Branding -->
+        <!-- Service Portal Logo/Branding -->
         <div style="text-align: center; margin-bottom: 32px;">
             <div style="font-size: 32px; font-weight: 700; color: #374151; margin-bottom: 8px;">
-                SERVICE HUB PORTAL
+                SERVICE PORTAL
             </div>
             <p style="color: #6b7280; font-size: 14px; margin: 0;" data-en="Powered by Mobisat - Dealer Management Platform" data-it="Alimentato da Mobisat - Piattaforma Gestione Dealer">
                 Powered by Mobisat - Dealer Management Platform
