--- a/pages/login.html
+++ b/pages/login.html
@@ -37,7 +37,7 @@
         <!-- Logo and Title -->
         <div class="text-center mb-8">
             <div class="mb-4">
-                <img src="../images/serviceHub.png" alt="Service Hub" class="h-16 mx-auto" onerror="this.outerHTML='<div class=&quot;w-16 h-16 bg-blue-600 rounded-lg mx-auto flex items-center justify-center&quot;><span class=&quot;text-white font-bold text-2xl&quot;>SH</span></div>'">
+                <img src="../images/serviceHub.png" alt="Service Portal" class="h-16 mx-auto" onerror="this.outerHTML='<div class=&quot;w-16 h-16 bg-blue-600 rounded-lg mx-auto flex items-center justify-center&quot;><span class=&quot;text-white font-bold text-2xl&quot;>SP</span></div>'">
             </div>
             <h1 id="pageTitle" class="text-3xl font-bold text-white mb-2">Service Portal</h1>
             <p id="pageSubtitle" class="text-blue-300">Advanced Telematics Platform</p>
