--- a/settings.html
+++ b/settings.html
@@ -188,7 +188,7 @@
     <!-- Sidebar -->
     <div class="sidebar fixed left-0 top-0 h-full w-16 flex flex-col py-4 z-50">
         <div class="flex items-center justify-center mb-8">
-            <img src="/images/greenbox-logo.png" alt="Service Hub" class="w-10 h-10 object-contain" onerror="this.style.display='none'; document.getElementById('logoFallback').style.display='flex'" id="sidebarLogo">
+            <img src="/images/greenbox-logo.png" alt="Service Portal" class="w-10 h-10 object-contain" onerror="this.style.display='none'; document.getElementById('logoFallback').style.display='flex'" id="sidebarLogo">
             <div class="w-10 h-10 bg-green-600 rounded-lg flex items-center justify-center text-white font-bold text-xs" style="display: none;" id="logoFallback">SH</div>
         </div>
         
