--- a/backup/settings_old.html
+++ b/backup/settings_old.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impostazioni - Service Hub Portal</title>
+    <title>Impostazioni - Service Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
@@ -41,7 +41,7 @@
     <div class="sidebar fixed left-0 top-0 h-full w-16 flex flex-col py-4 z-50">
         <!-- Logo -->
         <div class="flex items-center justify-center mb-8">
-            <img src="/images/greenbox-logo.png" alt="Service Hub" class="w-10 h-10 object-contain" onerror="this.style.display='none'; document.getElementById('logoFallback').style.display='flex'" id="sidebarLogo">
+            <img src="/images/greenbox-logo.png" alt="Service Portal" class="w-10 h-10 object-contain" onerror="this.style.display='none'; document.getElementById('logoFallback').style.display='flex'" id="sidebarLogo">
             <!-- Fallback logo if image fails -->
             <div class="w-10 h-10 bg-green-600 rounded-lg flex items-center justify-center text-white font-bold text-xs" style="display: none;" id="logoFallback">
                 SH
@@ -516,7 +516,7 @@
                          <!-- Version -->
                          <div class="max-w-sm px-2 text-left">
                              <p class="settings-description text-sm" data-i18n="settings.system.version"></p>
-                             <p class="settings-title">Service Hub Portal v1.0</p>
+                             <p class="settings-title">Service Portal v1.0</p>
                          </div>
                          <!-- Databases -->
                          <div class="max-w-sm px-2 space-y-1.5 text-left">
