--- a/header.html
+++ b/header.html
@@ -1,10 +1,10 @@
 <header class="fixed top-0 left-0 right-0 z-40 bg-white/90 dark:bg-dark-secondary/90 backdrop-blur-sm border-b border-gray-200 dark:border-gray-700">
     <div class="container mx-auto px-6 py-4">
         <div class="flex items-center justify-between">
-            <!-- Service Hub Logo -->
+            <!-- Service Portal Logo -->
             <div class="flex items-center">
                 <a href="/index.html" class="flex items-center">
-                    <!-- Service Hub Logo - using PNG for now -->
+                    <!-- Service Portal Logo - using PNG for now -->
                     <img src="/images/serviceHub.png" 
                          alt="Service Portal" 
                          class="h-8 w-auto"
