--- a/vehicle.html
+++ b/vehicle.html
@@ -202,7 +202,7 @@
     <div class="sidebar fixed left-0 top-0 h-full w-16 flex flex-col py-4 z-50">
         <!-- Logo -->
         <div class="flex items-center justify-center mb-8">
-            <img src="/images/greenbox-logo.png" alt="Service Hub" class="w-10 h-10 object-contain" onerror="handleLogoError()" id="sidebarLogo">
+            <img src="/images/greenbox-logo.png" alt="Service Portal" class="w-10 h-10 object-contain" onerror="handleLogoError()" id="sidebarLogo">
             <!-- Fallback logo if image fails -->
             <div class="w-10 h-10 bg-green-600 rounded-lg flex items-center justify-center text-white font-bold text-xs" style="display: none;" id="logoFallback">
                 SH
